--- a/css/style.css
+++ b/css/style.css
@@ -17,11 +17,14 @@ body {
     display: flex;
 }
 
+.h_80 {
+    height: 80px;
+}
+.h_70 {
+    height: 70px;
+}
 .h_60 {
     height: 60px;
-}
-.h_40 {
-    height: 40px;
 }
 
 .w40 {
@@ -29,6 +32,9 @@ body {
 }
 .w60 {
     width: 60%;
+}
+.w80 {
+    width: 80%;
 }
 
 .light_grey_back {
@@ -44,19 +50,50 @@ body {
     background-color: white;
 }
 
-.circle {
-    border-radius: 100%;
+.center_flex {
+    align-items: center;
+}
+.flex_expand {
+    flex-grow: 2;
+}
+
+.small {
+    height: 50px;
+}
+.big {
+    height: 60px;
+}
+
+.left_margin_10 {
+    margin-left: 10px;
+}
+.left_margin_20 {
+    margin-left: 20px;
+}
+.pad_10 {
+    padding: 10px;
+}
+
+i {
+    margin-right: 20px;
 }
 
 /* FONT */
 .double {
-    font-size: 2em;
+    font-size: 1.5em;
 }
 
-/* --- ROOT --- */
+.grey_col {
+    color: grey;
+}
+.under {
+    text-decoration: underline;
+}
+
+/* --- root --- */
 #root {
     height: 100%;
-    width: 70%;
+    width: 80%;
     min-width: 900px;
     margin: 0 auto;
     background-color: white;
@@ -66,35 +103,118 @@ body {
 .nav_box {
     flex-direction: column;
     height: 100%;
+    width: 30%;
     background-color: lightblue;
+    border-right: 2px solid lightgrey;
 } 
+
+.user_box .user {
+    flex-grow: 2;
+}
+
+.logo {
+    border-radius: 100%;
+}
 
 .notifications {
     background-color: #8EDAFC;
 }
 .notifications i {
     color: #8EDAFC;
+    padding: 10px;
+    text-align: center;
 }
+.notifications .bell {
+    height: 50px;
+    width: 50px;
+    line-height: 50px;
+    border-radius: 100%;
+}
+
 
 .search {
     background-color: #FAFAFA;
     color: grey;
+    padding: 10px;
+    justify-content: space-between;
+}
+#chat_search {
+    height: 40px;
+    border: none;
+}
+.search_label {
+    height: 40px;
+    width: 20%;
+    line-height: 40px;
+    text-align: center;
 }
 
 .chat_list {
     flex-grow: 2;
+    overflow-y: auto;
+}
+.chat_list ul {
+    list-style: none;
 }
 
 /* --- chat_box --- */
 .chat_box {
     flex-direction: column;
     height: 100%;
-    width: 60%;
-    background-color: lightcoral;
+    width: 70%;
 }
 
 .chat {
     flex-grow: 2;
     background-image: url("../img/mine.jpg");
+    overflow-y: auto;
+}
+.chat_messages {
+    width: 80%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    list-style: none;
+}
+.msg {
+    position: relative;
+    width: 45%;
+    margin: 10px 20px;
+    padding: 15px 10px 20px;
+    border-radius: 10px;
+}
+.msg_date {
+    position: absolute;
+    bottom: 3px;
+    right: 3px;
+    font-size: 0.6em;
+    color: lightgray;
+}
+
+.sent {
+    background-color: #D5F9BA;
+    align-self: flex-end;
+}
+.received {
+    background-color: white;
+    align-self: flex-start;
+}
+
+.message_box {
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 0;
+}
+.message_box i {
+    width: 10%;
+    text-align: center;
+}
+.message_in {
+    height: 50px;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    border: none;
+    padding: 0 10px;
 }
 
